--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,9 @@
 $breakpoint-mobile: 420px;
 $breakpoint-tablet: 768px;
 $breakpoint-desktop: 1024px;
+
+// color
+$color-main: #b71c1c;
+$color-point: #7f0600;
+$color-point-light: #f5f5f6;
+$color-bg: #e1e2e1;
