--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,13 +10,14 @@ body {
   display: flex;
   flex-direction: column;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: $color-bg;
 }
 
 header {
   display: flex;
   justify-content: center;
   height: 77px;
-  background-color: #e45152;
+  background-color: $color-main;
   h1 {
     color: white;
     font-size: 1.7rem;
@@ -40,7 +41,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 20vh;
+    height: 30vh;
     h1 {
       font-size: 2.5rem;
       font-weight: 500;
@@ -67,7 +68,7 @@ main {
       display: flex;
       flex-direction: column;
       width: 30vw;
-      margin-bottom: 3vh;
+      margin-bottom: 10vh;
       img {
         width: 100%;
         max-width: 560px;
@@ -77,11 +78,15 @@ main {
       h1 {
         font-size: 1.2rem;
         padding-left: 10px;
+        margin-bottom: 10px;
         color: rgba(0, 0, 0, 0.6);
         cursor: pointer;
         &:hover,
         &:focus {
           font-weight: 500;
+        }
+        span {
+          font-size: 0.9rem;
         }
       }
     }
