--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,5 +5,7 @@ $breakpoint-desktop: 1024px;
 // color
 $color-main: #b71c1c;
 $color-point: #7f0600;
+$color-point-second: #c85a54;
+$color-point-second-light: #ff8a80;
 $color-point-light: #f5f5f6;
 $color-bg: #e1e2e1;
