--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;700&display=swap');
+
 $breakpoint-mobile: 420px;
 $breakpoint-tablet: 768px;
 $breakpoint-desktop: 1024px;
