--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,11 +9,16 @@
 body {
   display: flex;
   flex-direction: column;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, 'Roboto Mono', monospace, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
   background-color: $color-bg;
 }
 
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   justify-content: center;
   height: 77px;
@@ -21,7 +26,7 @@ header {
   h1 {
     color: white;
     font-size: 1.7rem;
-    font-weight: 300;
+    font-weight: 500;
     align-self: center;
     text-transform: uppercase;
 
@@ -32,6 +37,7 @@ header {
 }
 
 main {
+  margin-top: 77px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -67,9 +73,11 @@ main {
     }
   }
   .main__wrapper {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 48% 48%;
+    gap: 2%;
+    width: 100%;
+    padding: 20px;
     .practice_wrapper {
       padding: 20px;
       background-color: $color-point-light;
@@ -95,11 +103,11 @@ main {
     .portfolio_wrapper {
       display: flex;
       flex-direction: column;
-      width: 30vw;
       margin-bottom: 10vh;
+
       img {
         width: 100%;
-        max-width: 560px;
+        max-width: 780px;
         margin-bottom: 10px;
         cursor: pointer;
       }
