--- a/src/scss/rows-and-columns.scss
+++ b/src/scss/rows-and-columns.scss
@@ -13,33 +13,26 @@ header {
   padding: 0 20px;
   .grid {
     display: grid;
-    grid-template-columns: repeat(5, 100px) 50px;
-    grid-template-rows: 40px repeat(3, 70px) 30px;
-    grid-template-areas:
-      'header header header header header header'
-      'content content content content content nav'
-      'content content content content content nav'
-      'content content content content content nav'
-      'footer footer footer footer footer footer';
+    gap: 10px;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: repeat(4, 100px);
     .header {
-      grid-area: header;
+      grid-column-start: 1;
+      grid-column-end: 5;
       background-color: $color-point;
       color: $color-bg;
       padding: 10px;
     }
     .content {
-      grid-area: content;
       background-color: $color-point-second;
       padding: 10px;
     }
     .nav {
-      grid-area: nav;
       background-color: $color-point-light;
       color: $color-point;
       padding: 10px;
     }
     .footer {
-      grid-area: footer;
       background-color: $color-main;
       color: $color-bg;
       padding: 10px;
